cleaning (#2956)