@@ -60,35 +60,35 @@ class RelicPurgeFragments extends GameStateSubcommand {
         }
 
         Game game = getGame();
-        String message = activePlayer.getRepresentation() + " purged ";
+        StringBuilder message = new StringBuilder(activePlayer.getRepresentation() + " purged ");
         if (fragmentsToPurge.size() == 1) {
-            String fragid = fragmentsToPurge.get(0);
+            String fragid = fragmentsToPurge.getFirst();
             activePlayer.removeFragment(fragid);
             game.setNumberOfPurgedFragments(game.getNumberOfPurgedFragments() + 1);
             switch (fragid) {
-                case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message += "a " + ExploreEmojis.CFrag + "cultural";
-                case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" -> message += "a " + ExploreEmojis.HFrag + "hazardous";
-                case "irf1", "irf2", "irf3", "irf4", "irf5" -> message += "an " + ExploreEmojis.IFrag + "industrial";
-                case "urf1", "urf2", "urf3" -> message += "an " + ExploreEmojis.UFrag + "unknown";
-                default -> message += " " + fragid;
+                case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message.append("a " + ExploreEmojis.CFrag + "cultural");
+                case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" -> message.append("a " + ExploreEmojis.HFrag + "hazardous");
+                case "irf1", "irf2", "irf3", "irf4", "irf5" -> message.append("an " + ExploreEmojis.IFrag + "industrial");
+                case "urf1", "urf2", "urf3" -> message.append("an " + ExploreEmojis.UFrag + "unknown");
+                default -> message.append(" ").append(fragid);
             }
-            message += " relic fragment.";
+            message.append(" relic fragment.");
         } else {
             for (String fragid : fragmentsToPurge) {
                 activePlayer.removeFragment(fragid);
                 game.setNumberOfPurgedFragments(game.getNumberOfPurgedFragments() + 1);
                 switch (fragid) {
-                    case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message += ExploreEmojis.CFrag;
-                    case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" -> message += ExploreEmojis.HFrag;
-                    case "irf1", "irf2", "irf3", "irf4", "irf5" -> message += ExploreEmojis.IFrag;
-                    case "urf1", "urf2", "urf3" -> message += ExploreEmojis.UFrag;
-                    default -> message += " " + fragid;
+                    case "crf1", "crf2", "crf3", "crf4", "crf5", "crf6", "crf7", "crf8", "crf9" -> message.append(ExploreEmojis.CFrag);
+                    case "hrf1", "hrf2", "hrf3", "hrf4", "hrf5", "hrf6", "hrf7" -> message.append(ExploreEmojis.HFrag);
+                    case "irf1", "irf2", "irf3", "irf4", "irf5" -> message.append(ExploreEmojis.IFrag);
+                    case "urf1", "urf2", "urf3" -> message.append(ExploreEmojis.UFrag);
+                    default -> message.append(" ").append(fragid);
                 }
             }
-            message += " relic fragments.";
+            message.append(" relic fragments.");
         }
         CommanderUnlockCheckService.checkAllPlayersInGame(game, "lanefir");
-        MessageHelper.sendMessageToEventChannel(event, message);
+        MessageHelper.sendMessageToEventChannel(event, message.toString());
 
         if (activePlayer.hasTech("dslaner")) {
             activePlayer.setAtsCount(activePlayer.getAtsCount() + 1);
